// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`astro/prettier-ignore/1tbs > comments that contain the phrase \`prettier-ignore\` but do not prevent formatting (1) 1`] = `
"---
/**
 * prettier-ignore
 */
if (condition1) {
  foo;
} else if (condition2) {
  bar;
} else {
  baz;
}
---

<!--
 ! prettier-ignore
-->
<script>
  if (condition1) {
    foo;
  } else if (condition2) {
    bar;
  } else {
    baz;
  }
</script>
"
`;

exports[`astro/prettier-ignore/1tbs > comments that contain the phrase \`prettier-ignore\` but do not prevent formatting (2) 1`] = `
"---
// /* prettier-ignore */
if (condition1) {
  foo;
} else if (condition2) {
  bar;
} else {
  baz;
}
---

<!-- /* prettier-ignore */ -->
<script>
  if (condition1) {
    foo;
  } else if (condition2) {
    bar;
  } else {
    baz;
  }
</script>
"
`;

exports[`astro/prettier-ignore/1tbs > ignore comment (1) 1`] = `
"---
// prettier-ignore
if (condition1) {
  foo
} else if (condition2) {
  bar
}
else
{
  baz
}
---

<script>
  // prettier-ignore
  if (condition1) {
  foo
} else if (condition2) {
  bar
}
else
{
  baz
}
</script>
"
`;

exports[`astro/prettier-ignore/1tbs > ignore comment (2) 1`] = `
"---
/* prettier-ignore */
if (condition1) {
  foo
} else if (condition2) {
  bar
}
else
{
  baz
}
---

<script>
  /* prettier-ignore */
  if (condition1) {
  foo
} else if (condition2) {
  bar
}
else
{
  baz
}
</script>
"
`;

exports[`astro/prettier-ignore/1tbs > ignore comment (3) 1`] = `
"<!-- prettier-ignore -->
<div>
<script>
if (condition1) {
  foo
} else if (condition2) {
  bar
}
else
{
  baz
}
</script>
</div>
"
`;

exports[`astro/prettier-ignore/1tbs > ignore comment (4) 1`] = `
"<div>
  <!-- prettier-ignore -->
  <div>
    <script is:inline>
    if (condition1) {
      foo
    } else if (condition2) {
      bar
    }
    else
    {
      baz
    }
    </script>
  </div>
  <div>
    <script is:inline>
      if (condition1) {
        foo;
      } else if (condition2) {
        bar;
      } else {
        baz;
      }
    </script>
  </div>
</div>
"
`;
